<resources>
    <string name="app_name">Dissajob Recruiter</string>
    <string name="home">Home</string>
    <string name="job">Pekerjaan</string>
    <string name="notification">Notifikasi</string>
    <string name="profile">Profil</string>
    <string name="txt_all">Semua</string>
    <string name="txt_accepted">Diterima</string>
    <string name="txt_marked">Ditandai</string>
    <string name="txt_rejected">Ditolak</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar">Daftar</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="sub_heading_forgot_password">Untuk mengatur ulang kata sandi, silahkan masukkan email Anda :</string>
    <string name="first_name">Nama Depan</string>
    <string name="last_name">Nama Belakang (Opsional)</string>
    <string name="txt_email">Email</string>
    <string name="txt_confirm_password">Confirm password</string>
    <string name="txt_password">Password</string>
    <string name="txt_edit_text_error_alert">%1$s tidak boleh kosong</string>
    <string name="txt_password_doesnt_match">%1$s tidak cocok</string>
    <string name="txt_no_job">Tidak ada pekerjaan</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="qualification">Kualifikasi</string>
    <string name="employment">Tipe pekerjaan</string>
    <string name="txt_industry">Industri</string>
    <string name="txt_salary_opsional">Gaji (opsional)</string>
    <string name="txt_salary">Gaji (opsional)</string>
    <string name="publish">Tambahkan</string>
    <string name="create_job_title">Tambahkan pekerjaan</string>
    <string name="edit_job_title">Ubah pekerjaan</string>
    <string name="role">Role</string>
    <string name="txt_sign_up_headline">Bergabung sekarang di Dissajob</string>
    <string name="masuk">Masuk</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="error_login">Email/Password anda salah</string>
    <string name="recruiter_name">%1$s %2$s</string>
    <string name="profile_header_heading">Akun Saya</string>
    <string name="success_signup">Silahkan lakukan verifikasi email</string>
    <string name="email_is_not_verified">Silahkan lakukan verifikasi email terlebih dahulu</string>
    <string name="success_post_job">Pekerjaan berhasil ditambahkan</string>
    <string name="success_update_job">Pekerjaan berhasil diubah</string>
    <string name="failure_post_job">Pekerjaan gagal ditambahkan</string>
    <string name="loading">Loading</string>
    <string name="open_status">Open</string>
    <string name="closed_status">Closed</string>
    <string name="no_applicants">Tidak ada pelamar</string>
    <string name="job_description">Deskripsi</string>
    <string name="job_details_title">Detail</string>
    <string name="applicants">Pelamar</string>
    <string name="job_details">Detail Pekerjaan</string>
    <string name="job_details_date_format">%1$s \u2022 %2$d pelamar</string>
    <string name="txt_current_email">Email saat ini</string>
    <string name="txt_new_email">Email baru</string>
    <string name="txt_update">Update</string>
    <string name="change_profile_title">Ubah Profil</string>
    <string name="change_email_title">Ubah Email</string>
    <string name="change_phone_number_title">Ubah Nomor Telepon</string>
    <string name="change_password_title">Ubah Password</string>
    <string name="txt_error_form_text">%1$s tidak boleh kosong</string>
    <string name="txt_success_update_profile">%1$s berhasil di update</string>
    <string name="txt_failure_update_profile">Update gagal</string>
    <string name="txt_failure_upload_profile_picture">Gagal upload foto profil</string>
    <string name="txt_current_password">Password saat ini</string>
    <string name="txt_retype_password">Masukkan sekali lagi</string>
    <string name="password_confirm_password_not_match">Password tidak cocok</string>
    <string name="wrong_password">Password salah</string>
    <string name="txt_sign_out">Keluar</string>
    <string name="preview">Preview</string>
    <string name="txt_old_phone_number">Nomor lama</string>
    <string name="txt_new_phone_number">Nomor baru</string>
    <string name="phone_number_invalid">Nomor telepon tidak valid</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="security">Keamanan</string>
    <string name="settings">Pengaturan</string>
    <string name="name">Nama</string>
    <string name="address">Alamat</string>
    <string name="txt_profile_role">Role :</string>
    <string name="txt_logout_title">Keluar dari Dissajob</string>
    <string name="txt_logout_message">Apakah Anda ingin keluar?</string>
    <string name="confirm_logout_text">Keluar</string>
    <string name="confirm_cancel_text">Batal</string>
    <string name="reset">Atur ulang</string>
    <string name="email_not_found">Email tidak ditemukan</string>
    <string name="success_alert_reset_password">Email reset password telah dikirimkan</string>
    <string name="job_status">Status pekerjaan</string>
    <string name="txt_recruitment">Rekrutasi</string>
    <string name="txt_open">Buka</string>
    <string name="txt_close">Tutup</string>
    <string name="failure_alert_create_job">Gagal menambahkan lowongan pekerjaan</string>
    <string name="failure_alert_update_job">Gagal mengubah lowongan pekerjaan</string>
    <string name="confirm_alert_delete_job">Hapus lowongan pekerjaan ?</string>
    <string name="success_alert_delete_job">Berhasil menghapus lowongan pekerjaan</string>
    <string name="failure_alert_delete_job">Gagal menghapus lowongan pekerjaan</string>
    <string name="delete_job">Hapus</string>
    <string name="edit_job">Ubah</string>
    <string name="txt_cancel">Batal</string>
    <string name="txt_job_type_title">Tipe</string>
    <string name="txt_job_salary_value">Tidak ditentukan</string>
    <string name="txt_job_address_title">Alamat</string>
    <string name="txt_job_type_value">%1$s \u2022 %2$s</string>
    <string name="txt_full_time">Purnawaktu</string>
    <string name="txt_part_time">Paruh waktu</string>
    <string name="txt_self_employed">Wiraswasta</string>
    <string name="txt_freelance">Pekerja lepas</string>
    <string name="txt_contract">Kontrak</string>
    <string name="txt_internship">Magang</string>
    <string name="txt_agriculture">Pertanian</string>
    <string name="txt_transportation">Transportasi</string>
    <string name="txt_telecommunication">Telekomunikasi</string>
    <string name="txt_construction">Konstruksi</string>
    <string name="txt_electronic">Elektronik</string>
    <string name="txt_entertainment">Hiburan</string>
    <string name="txt_pharmacy">Farmasi</string>
    <string name="txt_manufacture">Manufaktur</string>
    <string name="txt_mining">Pertambangan</string>
    <string name="txt_computer">Komputer</string>
    <string name="txt_technology">Teknologi</string>
    <string name="txt_other">Lainnya</string>
    <string name="txt_remote">Remote</string>
    <string name="txt_onsite">Onsite</string>
    <string name="txt_employment_type">Jenis pekerjaan</string>
    <string name="txt_industry_type">Jenis industri</string>
    <string name="txt_job_type">Tipe pekerjaan</string>
    <string name="txt_open_for_disability">Terbuka untuk penyandang disabilitas ?</string>
    <string name="txt_yes">Iya</string>
    <string name="txt_no">Tidak</string>
    <string name="txt_additional_description">Keterangan tambahan</string>
    <string name="job_details_additional_information">Keterangan tambahan : %1$s</string>

    <string name="txt_sign_in_header">Selamat Datang Di Dissajob</string>
    <string name="txt_sign_in">Masuk</string>
    <string name="txt_sign_up">Daftar</string>
    <string name="txt_lupa_password">Lupa password ?</string>

    <string name="txt_change_email_description">Masukkan alamat email aktif</string>

    <string name="txt_change_password_title">Ganti kata sandi</string>
    <string name="txt_change_password_description">Masukkan kata sandi yang kuat</string>
    <string name="txt_new_password">Password baru</string>
    <string name="txt_change_password_note">*Mohon tidak menggunakan password yang lama</string>
    <string name="txt_change_password_first_rule">8 karakter atau lebih</string>
    <string name="txt_change_password_second_rule">Kombinasi huruf besar, kecil, angka dan simbol</string>
    <string name="txt_show_profile">Lihat profil</string>
    <string name="txt_additional_information">Informasi Tambahan</string>
    <string name="txt_first_question">Deskripsikan diri Anda secara singkat</string>
    <string name="txt_second_question">Alasan Anda melamar di perusahaan kami</string>
    <string name="txt_third_question">Mengapa kami harus menerima Anda</string>
    <string name="txt_application_details">Detail Lamaran</string>
    <string name="txt_apply_at">Dilamar pada</string>
    <string name="txt_application_status">Status Lamaran</string>
    <string name="txt_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="txt_reject">Tolak</string>
    <string name="txt_accept">Terima</string>
    <string name="txt_error_occurred">Terjadi kesalahan</string>
    <string name="txt_update_application_alert">%1$s lamaran ?</string>
    <string name="txt_accept_application">Lamaran diterima</string>
    <string name="txt_reject_application">Lamaran ditolak</string>
    <string name="txt_mark_application">Lamaran ditandai</string>
    <string name="txt_about_me">Tentang saya</string>
    <string name="txt_media">Media</string>
    <string name="txt_no_experience">Belum ada pengalaman</string>
    <string name="txt_view_all">Tampilkan semua</string>
    <string name="txt_work_experience">Pengalaman kerja</string>
    <string name="txt_educational_background">Pendidikan</string>

    <string name="txt_company_type">%1$s \u2022 %2$s</string>
    <string name="txt_range_date">%1$s - %2$s</string>
    <string name="txt_present">Saat ini</string>

    <string name="txt_education_level_field_of_study">%1$s, %2$s</string>
    <string name="txt_no_data">Tidak ada data</string>

    <string name="txt_applicant_profile">Profil pelamar</string>
    <string name="txt_contact">Kontak</string>
    <string name="txt_advance">Lanjutan</string>

    <string name="txt_fill_all_data_alert">Silahkan untuk melengkapi data terlebih dahulu</string>
    <string name="txt_apply_as">Melamar sebagai %1$s</string>
    <string name="txt_notification_title">%1$s melamar pekerjaan yang anda bagikan</string>
    <string name="txt_notification_body">Ayo lihat lamarannya dan dapatkan pelamar yang berkualifikasi</string>
    <string name="txt_view_application">Lihat lamaran</string>
    <string name="txt_no_notification">Tidak ada notifikasi</string>
    <string name="txt_export">Export</string>
    <string name="txt_download_all">Download semua</string>
</resources>