<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:divider="?android:listDivider"
    android:dividerPadding="16dp"
    android:orientation="vertical"
    android:showDividers="middle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/profile"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/btnChangeProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_16dp"
        android:paddingBottom="@dimen/margin_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/edit_profile"
            android:textColor="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnChangePhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_16dp"
        android:paddingBottom="@dimen/margin_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/phone_number"
            android:textColor="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnChangeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_16dp"
        android:paddingBottom="@dimen/margin_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/email"
            android:textColor="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>