<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_16dp">

    <TextView
        android:id="@+id/tvAdditionalInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_additional_information"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirstQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_first_question"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAdditionalInformation" />

    <EditText
        android:id="@+id/etFirstQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:backgroundTint="@color/black"
        android:enabled="false"
        android:fontFamily="@font/roboto"
        android:inputType="textCapSentences|textMultiLine"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFirstQuestion" />

    <TextView
        android:id="@+id/tvSecondQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_second_question"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFirstQuestion" />

    <EditText
        android:id="@+id/etSecondQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:backgroundTint="@color/black"
        android:enabled="false"
        android:fontFamily="@font/roboto"
        android:inputType="textCapSentences|textMultiLine"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSecondQuestion" />

    <TextView
        android:id="@+id/tvThirdQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_third_question"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSecondQuestion" />

    <EditText
        android:id="@+id/etThirdQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:backgroundTint="@color/black"
        android:enabled="false"
        android:fontFamily="@font/roboto"
        android:inputType="textCapSentences|textMultiLine"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvThirdQuestion" />

</androidx.constraintlayout.widget.ConstraintLayout>